# SignalSnap-PyTorch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: test.yaml
.github/workflows/: test.yaml
Examples/: Straightforward_Example.ipynb
docs/: new_api.md
result_shapes/: helper_functions_test.py
src/multichss/: MultiChSS_CrossConfig.py  MultiChSS_PlotConfig.py  MultiChSS_SpectrumCalculator.py  MultiChSS_SpectrumConfig.py  MultiChSS_SpectrumPlotter.py  __init__.py  aggregator.py  config.py  configurators.py  cumulants.py  fft.py  pipeline.py  pipelines.py  planning.py  results.py  spectra.py  utils.py
tests/: cumulant_tests.py  spec_test.py  test_configurators.py  test_daten_aus_münchen.py  test_new_vs_old_api.py  test_planning.py  test_straightforward_example.py
tests/test_data/references/: 5Qubit_short_data_auto_corr.md  5Qubit_short_data_auto_corr.npz  5Qubit_short_data_cross_corr.md  5Qubit_short_data_cross_corr_ch124.npz  5Qubit_short_data_cross_corr_ch3.npz
