[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multichss"
version = "0.1.0"
description = "SignalSnap (PyTorch): Signal Analysis In Python Made Easy"
readme = "README.md"
authors = [
    { name = "Armin Ghorbanietemad", email = "armin.ghorbanietemad@rub.de" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "matplotlib>=3.10.9",
    "tqdm>=4.68.2",
    "numba>=0.65.1",
    "h5py>=3.16.0",
    "torch>=2.12.0",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/ArminGEtemad/SignalSnap-PyTorch"

[tool.setuptools]
# This tells setuptools to look for code inside the 'src' directory
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
