[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multichss"
version = "0.1.0"
description = "SignalSnap (PyTorch): Signal Analysis In Python Made Easy"
readme = "README.md"
authors = [
    { name = "Armin Ghorbanietemad", email = "armin.ghorbanietemad@rub.de" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.10.7",
    "torch>=2.6.0",
    "pandas>=3.0.0",
    "tabulate>=0.9.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "h5py",
]

[project.urls]
Homepage = "https://github.com/ArminGEtemad/SignalSnap-PyTorch"

[tool.setuptools]
# This tells setuptools to look for code inside the 'src' directory
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
